Fixes various issues and attends feedback from figaro: - Informations -> Information - Fixes store switcher menu appearing behind some DOM elements. - Removed fax number from shipping and billing addresses. - Added alternative logout menu for mobile screens. - Removed the store theme selector - Fixed youtube videos sometimes not loading - Removed unnecessary explaation of obvious shipping methods

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cspi-header.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cspi-header.scss
@@ -130,6 +130,7 @@ $logo-color: #2D374D;
     background-color: white;
     z-index: 1;
     cursor: default;
+    z-index: 3;
 }
 
 .cspi-header-store-menu-item {
